# black_marlin

./: Cargo.toml
black_marlin/: Cargo.toml  build.rs
black_marlin-compiler/: Cargo.toml
black_marlin-compiler/src/: config.rs  error.rs  procmacro.rs  translator.rs
black_marlin-macros/: Cargo.toml
black_marlin-macros/src/: lib.rs
black_marlin-tests/fuzzing-tests/: Cargo.toml
black_marlin-tests/integration-tests/: Cargo.toml
black_marlin-tests/integration-tests/tests/: compile.rs  config.rs  template_once.rs
black_marlin-tests/integration-tests/tests/fails/: invalid_option_value.rs  missing_semicolon.rs  no_path.rs  repeated_arguments.rs  template_not_found.rs  unbalanced_brace.rs  unclosed_delimter.rs  unexpected_token.rs  unknown_option.rs
black_marlin/src/: lib.rs
black_marlin/src/runtime/: mod.rs  render.rs  utils.rs
black_marlin/src/runtime/escape/: mod.rs
examples/: Cargo.toml  actix.rs  include.rs  simple.rs
sailfish/: Cargo.toml
sailfish-compiler/: Cargo.toml
sailfish-compiler/src/: optimizer.rs
sailfish-macros/: Cargo.toml
sailfish-tests/fuzzing-tests/: Cargo.toml
sailfish-tests/integration-tests/: Cargo.toml
