[package]
name = "fuzzing-tests"
version = "0.3.4"
authors = ["Ryohei Machida <orcinus4627@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afl = "0.11.1"
black_marlin = { path = "../../black_marlin", default-features = false }
black_marlin-compiler = { path = "../../black_marlin-compiler", default-features = false }